bad/assign_field_bool_fcall_string.example_compiler_output
ERROR
[1mbad/assign_field_bool_fcall_string.lat:8:12: [1;31merror: [0;1massigning to `boolean` from incompatible type `string`[m
	foo().fld = "";
	          [1;32m^[m
